[gd_scene load_steps=3 format=3 uid="uid://c3iesn4gm1oum"]

[ext_resource type="Theme" uid="uid://dw7ft4xik3rji" path="res://Assets/Theme/Normal.tres" id="1_ik528"]
[ext_resource type="Script" path="res://Script/UI/QuestPanel.gd" id="2_w5gtn"]

[node name="QuestPanel" type="Control"]
custom_minimum_size = Vector2(280, 170)
layout_mode = 3
anchors_preset = 0
offset_right = 269.0
offset_bottom = 169.0
theme = ExtResource("1_ik528")
script = ExtResource("2_w5gtn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ClubPanel"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "击杀一百个怪物"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ProgressLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "3 / 100"
horizontal_alignment = 1

[node name="RewardLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "888 金币"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"EmptyBtn"
